--- a/rest/package.json
+++ b/rest/package.json
@@ -8,6 +8,11 @@
     "dependencies" : {
         "express" : "3.1.2",
         "jade" : "*",
-        "mongoose" : ">= 2.3.1"
+        "mongoose" : ">= 2.3.1",
+        "connect" : "*"
+    },
+    "devDependencies" : {
+        "jasmine-node" : "*",
+        "request" : "*"
     }
 }
